Projet GL/Projet_GL/src/test/deca/syntax/invalid/bad_readInt_2.deca
// Description:
//    readInt sans parenthese
//
// Resultats:
//    mismatched input ';' expecting '(
//
// Historique:
//    cree le 10/01/2023

{
    readInt;
}
